Update index.html structure with assets and dependenciesUpdate index.html with image references and CSS/JS linksUpdate index.html with image references and CSS/JS linksUpdate index.html
- Added references to images/logo/logo.png and images/sample-image.jpg
- Linked style.css stylesheet
- Linked script.js file
- Updated HTML structure with proper semantic tags

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minimal Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to Minimal Website</h1>
-    <p>This is a clean, minimal web page structure.</p>
+    <header>
+        <img src="images/logo/logo.png" alt="Website Logo" class="logo">
+        <h1>Welcome to Minimal Website</h1>
+    </header>
+    
+    <main>
+        <p>This is a clean, minimal web page structure.</p>
+        <img src="images/sample-image.jpg" alt="Sample Image" class="sample-image">
+    </main>
+    
+    <script src="script.js"></script>
 </body>
 </html>
